# Lab_PhotoBooth2

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
