[tool.poetry]
name = "photobooth-backend"
version = "0.1.0"
description = "FastAPI backend proxy for Google Gemini Imagen image generation"
authors = ["PhotoBooth <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


